added responsive design

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
     <div class="container">
         <div class="row d-flex justify-content-center">
-            <h1 class="col-5 m-5 text-center text-success">Edible-inedible</h1>
+            <h1 class="header col-5 w-100 m-5 text-center text-success">Edible-inedible</h1>
         </div>
         <div id="main-block" class="row d-flex justify-content-center p-4">
-            <img id="edible-inedible-img" class="col-3" src="./images/img2.png">
+            <img id="edible-inedible-img" class="col-6 col-lg-3" src="./images/img2.png">
             <h2 id="result" class="text-center"></h2>
-            <div id="bottom-container" class="col-6">
+            <div id="bottom-container" class="col-10 col-lg-6">
                 <div class="d-flex justify-content-between">
-                    <button id="edibleBtn" class="col-5 btn btn-success chooseAnswerBtn">Edible</button>
-                    <button id="inedibleBtn" class="col-5 btn btn-danger chooseAnswerBtn">Inedible</button>
+                    <button id="edibleBtn" class="buttons col-5 btn btn-success chooseAnswerBtn">Edible</button>
+                    <button id="inedibleBtn" class="buttons col-5 btn btn-danger chooseAnswerBtn">Inedible</button>
                 </div>
                 <div class="d-flex justify-content-center">
                     <button id="playAgain" class="col-5 btn btn-danger">Play again</button>
